// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Works with styled-components 1`] = `
.c0 {
  color: rgba(255,231,157,1);
  padding: 15px 30px;
  opacity: 1;
  font: 1.8rem / 2.4rem "Open Sans";
}

.c1 {
  padding-right: 45px;
  z-index: 2;
}

<div>
  <span
    class="c0 c1"
  />
</div>
`;

exports[`Text Works with styled-components 2`] = `
.c0 {
  color: rgba(255,231,157,1);
  padding: 15px 30px;
  opacity: 1;
  font: 1.8rem / 2.4rem "Open Sans";
  margin: 20px 0;
}

.c1 {
  padding-right: 45px;
  z-index: 2;
}

<div>
  <span
    class="c0 c1"
  />
</div>
`;

exports[`Text Works with styled-components 3`] = `
.c0 {
  color: rgba(255,231,157,1);
  padding: 15px 30px;
  opacity: 1;
  padding-right: 60px;
  margin: 5px;
  z-index: 5;
  font: 2rem / 2.4rem "Open Sans";
  margin: 20px 0;
}

<div>
  <span
    class="c0"
  />
</div>
`;
